--- a/transaction.html
+++ b/transaction.html
@@ -86,7 +86,7 @@
       }
     </style>
   </head>
-  <body style="overflow-x: hidden">
+  <body style="overflow-x: hidden; background: #f6f7f9;">
     <!-- header -->
     <div class="card mb-3 border-0 rounded-0 bg-header">
       <div class="card-body px-3 py-1">
